syntax = "proto3";

option csharp_namespace = "GrpcServer";

package domain;

service Provider {
    rpc GetUser(InfoRequest) returns (User);
    rpc SendUser(User) returns (User);
    rpc ModifyUser(InfoRequest) returns (InfoRequest);
    rpc GetUsers() returns(ListOfUsers);

    rpc GetGame(InfoRequest) returns (Game);
    rpc SendGame(Game) returns (Game);
    rpc DeleteGame(InfoRequest) returns (InfoRequest);
}

message ListOfUsers {
    repeated User users = 1;
}

message Game {
  string Title = 1;
  enum GameGender
    {
        Otros = 0;
        Aventura = 1;
        Accion = 2;
        Estrategia = 3;
        Infantil = 4;
        Deporte = 5;
    }
    GameGender Gender = 2;
    repeated ListOfUserRating UserRatings = 3;
    string Synopsis = 4;
    string Cover = 5;
    float RatingAverage = 6;
}

message User {
  string UserName = 1;
  repeated Game Games = 2;
}

message UserRating {
  string review = 1;
  
  enum GameCalification{
        Sin_Calificaciones = 0;
        Muy_Malo = 1;
        Malo = 2;
        Medio = 3;
        Bueno = 4;
        Muy_Bueno = 5;
    }
    GameCalification calification = 2;
    User user = 3;
}

message ListOfUserRating {
    repeated UserRating userRatings = 1;
}

message Catalogue {
    repeated Game Games = 1;
}

message InfoRequest {
    string info = 1;
} 