syntax = "proto3";

option csharp_namespace = "MyProtos";

package user;

message User {
  string UserName = 1;
  repeated ListOfGames Games = 2;
}

message ListOfGames {
  repeated Game games = 1;
}
